# Kube_Shell

./: README.md  TODO  kube_shell.py  kube_shell_launch.py  pyproject.toml
src/: __init__.py  __main__.py  kube_shell.py
